Yard counts, Trainer shift fix, Teacup yardmap fix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -74,3 +74,8 @@
     height: 25%;
     white-space: nowrap;
 }
+
+.icon-with-outline, .minutes-remaining {
+    filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.7)) drop-shadow(0 0 8px rgba(0, 0, 0, 0.7));
+    transform: translateY(-2px);
+}
